[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
# add the "sentence-transformers==5.1.0" down if you use NVDIA Cudas
dependencies = [
    "google>=3.0.0",
    "google-genai>=1.56.0",
    "nltk==3.9.1",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
]
